# gmailstream

./: .gitignore  AGENTS.md  README.md  hatch_build.py  pyproject.toml
docs/: credentials-guide.md
src/gmailstream/: auth.py  cli.py  config.py  gmail_client.py  paths.py  storage.py
